Added number input and based the years of experience input on that.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -234,6 +234,9 @@
   "input.name.placeholder": "Name",
   "input.new.password.label": "New password",
   "input.new.password.placeholder": "New password",
+  "input.occupations.hint": "Please specify how much experience you have in the chosen occupations",
+  "input.occupations.label": "Occupations",
+  "input.occupations.placeholder": "Occupations",
   "input.old.password.label": "Old password",
   "input.old.password.placeholder": "Old password",
   "input.password.label": "Password",
@@ -279,6 +282,8 @@
   "input.work.permit.front.description": "Front photo of my work permit",
   "input.work.permit.front.header": "Work permit",
   "input.work.permit.front.label": "Work permit (front photo)",
+  "input.years.of.experience.label": "Years of experience",
+  "input.years.of.experience.placeholder":  "Years of experience",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
   "job.actions.header.applied": "You have applied for this job",
