Added occupations input support to missing user traits supporting components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -234,9 +234,9 @@
   "input.name.placeholder": "Name",
   "input.new.password.label": "New password",
   "input.new.password.placeholder": "New password",
-  "input.occupations.hint": "Please specify how much experience you have in the chosen occupations",
-  "input.occupations.label": "Occupations",
-  "input.occupations.placeholder": "Occupations",
+  "input.occupations.hint": "Please specify how much experience you have in the chosen line of work",
+  "input.occupations.label": "Line of work experience",
+  "input.occupations.placeholder": "Line of work experience",
   "input.old.password.label": "Old password",
   "input.old.password.placeholder": "Old password",
   "input.password.label": "Password",
@@ -543,6 +543,7 @@
   "user.update.form.social.network.section.header": "Social networks",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Save changes",
+  "user.update.form.work.experience.section.header": "Work experience",
   "users.filter.search.label": "Search users",
   "users.filter.search.placeholder": "Search users",
   "validations.email": "must be a valid email address",
