--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -235,8 +235,8 @@
   "input.new.password.label": "New password",
   "input.new.password.placeholder": "New password",
   "input.occupations.hint": "Please specify how much experience you have in the chosen line of work",
-  "input.occupations.label": "Line of work experience",
-  "input.occupations.placeholder": "Line of work experience",
+  "input.occupations.label": "Work experience",
+  "input.occupations.placeholder": "Work experience",
   "input.old.password.label": "Old password",
   "input.old.password.placeholder": "Old password",
   "input.password.label": "Password",
