Use JA terms when staffingJob = true.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -220,6 +220,7 @@
   "input.job.digest.notification.frequency.placeholder": "Notification Frequency",
   "input.job.experience.label": "Work experience",
   "input.job.experience.placeholder": "Work experience",
+  "input.just.arrived.terms.label": "I accept Just Arrived´s terms of employment",
   "input.languages.hint": "Please rate how good you are at the chosen languages",
   "input.languages.label": "Language skills",
   "input.languages.placeholder": "Language skills",
