Update guide welcome title

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -113,7 +113,7 @@
   "guide.card.welcome.item.3.title": "At the job",
   "guide.card.welcome.paragraph.1": "Are you new in Sweden and not sure what to do when searching for a job? In this guide we have collected information and tips that will help you.",
   "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
-  "guide.card.welcome.title": "Welcome to the job guide",
+  "guide.card.welcome.title": "Welcome to the Just Arrived Job Guide",
   "guide.menu.title": "Job guide",
   "hint.pager.next": "Next",
   "hint.pager.previous": "Previous",
