--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -113,7 +113,7 @@
   "guide.card.welcome.item.3.title": "På jobbet",
   "guide.card.welcome.paragraph.1": "Är du ny i Sverige och inte säker på vad du ska göra när du söker jobb? I den här guiden har vi samlat information, samt tips och tricks som kommer hjälpa dig.",
   "guide.card.welcome.paragraph.2": "Guiden består av 3 delar:",
-  "guide.card.welcome.title": "Välkommen till jobbguiden",
+  "guide.card.welcome.title": "Välkommen till Just Arriveds Jobbguide",
   "guide.menu.title": "Jobbguide",
   "hint.pager.next": "Nästa",
   "hint.pager.previous": "Föregående",
