--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -463,6 +463,10 @@
   "reset.password.form.login.link": "Logga in",
   "reset.password.form.submit.button": "Byt lösenord",
   "reset.password.title": "Skriv in ditt nya lösenord",
+  "section.utalk.button": "Börja nu!",
+  "section.utalk.description": "Du som är registrerad hos Just Arrived får nu gratis tillgång till uTalks språkprodukt för svenska.  Med uTalk lär du dig snabbt ett nytt språk på ett lekfullt sätt där båda hjärnhalvorna aktiveras. Du kan lära dig svenska från mer än 100 olika språk. uTalk funkar både för dig som vill komma igång med svenskan och för dig som vill komplettera SFI.",
+  "section.utalk.hint": "Klicka nedan för att skapa ett konto och starta din kostnadsfria utbildning i svenska.",
+  "section.utalk.title": "Lär dig svenska. Kul, enkelt och gratis. Med snabbt resultat!",
   "share.section.title": "Dela på social media",
   "share.with.modal.section.title": "Dela",
   "sign.for.job.form.submit.button": "Signera",
