Pull translations from Transifex

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -113,7 +113,7 @@
   "guide.card.welcome.item.3.title": "في الوظيفة",
   "guide.card.welcome.paragraph.1": "هل أنت جديد في السويد وغير متأكد مما يجب القيام به عند البحث عن وظيفة؟ في هذا الدليل قمنا بجمع المعلومات والنصائح التي سوف تساعدك.",
   "guide.card.welcome.paragraph.2": "يتكون الدليل من 3 أجزاء:",
-  "guide.card.welcome.title": "مرحبا بك في دليل الوظائف",
+  "guide.card.welcome.title": "Welcome to the Just Arrived Job Guide",
   "guide.menu.title": "دليل الوظائف",
   "hint.pager.next": "التالي",
   "hint.pager.previous": "السابق",
@@ -220,6 +220,7 @@
   "input.job.digest.notification.frequency.placeholder": "تردد الإشعارات",
   "input.job.experience.label": "خبرة سنوات العمل",
   "input.job.experience.placeholder": "خبرة سنوات العمل",
+  "input.just.arrived.terms.label": "I accept Just Arrived´s terms of employment",
   "input.languages.hint": "يرجى تقييم نفسك في أداء اللغات المختارة",
   "input.languages.label": "معلومات لغوية",
   "input.languages.placeholder": "معلومات لغوية",
@@ -234,6 +235,9 @@
   "input.name.placeholder": "الاسم",
   "input.new.password.label": "كلمة المرور الجديدة",
   "input.new.password.placeholder": "كلمة المرور الجديدة",
+  "input.occupations.hint": "Please specify how much experience you have in the chosen line of work",
+  "input.occupations.label": "خبرة سنوات العمل",
+  "input.occupations.placeholder": "خبرة سنوات العمل",
   "input.old.password.label": "كلمة المرور القديمة",
   "input.old.password.placeholder": "كلمة المرور القديمة",
   "input.password.label": "كلمة السر",
@@ -241,6 +245,7 @@
   "input.personal.id.description": "تحميل صورة من بطاقة الهوية الشخصية",
   "input.personal.id.header": "رقم الهوية الشخصي",
   "input.personal.id.label": "رقم الهوية الشخصي",
+  "input.personal.letter.header": "Personal letter",
   "input.phone.label": "هاتف",
   "input.phone.placeholder": "هاتف",
   "input.primary.occupations.label": "اختيار المهن التي كنت مهتما بها",
@@ -279,6 +284,8 @@
   "input.work.permit.front.description": "تحميل الصورة الأمامية لتصريح العمل",
   "input.work.permit.front.header": "رخصة عمل",
   "input.work.permit.front.label": "تصريح العمل (صورة أمامية)",
+  "input.years.of.experience.label": "Years of experience",
+  "input.years.of.experience.placeholder":  "Years of experience",
   "input.zip.label": "صندوق بريد",
   "input.zip.placeholder": "صندوق بريد",
   "job.actions.header.applied": "قدّمت على الوظيفة",
@@ -500,6 +507,7 @@
   "user.missing.traits.form.submit.button": "التالي",
   "user.missing.traits.message.description": "يرجى اعادة النظر في تزويدنا بمزيد من المعلومات لزيادة فرصك للحصول على وظائف",
   "user.missing.traits.message.header": "نحن مهتمون بك",
+  "user.profile.form.document.input.hint": "Only documents (.pdf, .docx, .doc)",
   "user.profile.form.education.section.header": "دراسة",
   "user.profile.form.general.skills.section.header": "مهارات عامة",
   "user.profile.form.interests.section.header": "الإهتمامات",
@@ -538,6 +546,7 @@
   "user.update.form.social.network.section.header": "شبكات التواصل الإجتماعي ",
   "user.update.form.status.section.header": "الوضع",
   "user.update.form.submit.button": "حفظ تغييرات ملف التعريف",
+  "user.update.form.work.experience.section.header": "خبرة سنوات العمل",
   "users.filter.search.label": "البحث عن المستخدمين",
   "users.filter.search.placeholder": "البحث عن المستخدمين ",
   "validations.email": "يجب أن يكون عنوان بريد الكتروني صحيح",
