--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -1,10 +1,4 @@
 {
-  "guide.card.welcome.item.1.title": "Before you apply for jobs",
-  "guide.card.welcome.item.1.paragraph": "What do you need to work in Sweden?",
-  "guide.card.welcome.item.2.title": "How to apply for jobs",
-  "guide.card.welcome.item.2.paragraph": "Advice on how to find a job, how to write a resume and what you should think about when signing a contract.",
-  "guide.card.welcome.item.3.title": "At the job",
-  "guide.card.welcome.item.3.paragraph": "Practical information on what to expect when you start working.",
   "already.registered.modal.button": "ننوتل",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -26,9 +20,9 @@
   "assignment.hours": "Timmar",
   "assignment.rate.gross_salary": "gross salary",
   "back.to.jobs.section.link": "Find more jobs",
+  "basic_user.data.tab_title": "Basic",
   "basic.chat.messages.empty": "No messages yet",
   "basic.comments.empty": "No comments yet",
-  "basic_user.data.tab_title": "Basic",
   "button.form.submit.fail": "There are some errors, please review them above.",
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
@@ -111,9 +105,15 @@
   "god.mode.title": "{{numberOfUsers}} Users",
   "guide.card.welcome.button": "Start",
   "guide.card.welcome.faded.title": "Job guide",
+  "guide.card.welcome.item.1.paragraph": "What do you need to work in Sweden?",
+  "guide.card.welcome.item.1.title": "Before you apply for jobs",
+  "guide.card.welcome.item.2.paragraph": "Advice on how to find a job, how to write a resume and what you should think about when signing a contract.",
+  "guide.card.welcome.item.2.title": "How to apply for jobs",
+  "guide.card.welcome.item.3.paragraph": "Practical information on what to expect when you start working.",
+  "guide.card.welcome.item.3.title": "At the job",
   "guide.card.welcome.paragraph.1": "Are you new in Sweden and not sure what to do when searching for a job? In this guide we have collected information and tips that will help you.",
   "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
-  "guide.card.welcome.title": "Welcome to the job guide",
+  "guide.card.welcome.title": "Welcome to the Just Arrived Job Guide",
   "guide.menu.title": "Job guide",
   "hint.pager.next": "Next",
   "hint.pager.previous": "Previous",
@@ -185,7 +185,11 @@
   "input.email.label": "بریښنالیک",
   "input.email.or.phone.label": "Email or phone",
   "input.email.or.phone.placeholder": "Email or phone",
+  "input.email.or.phone.suggestion.hint": "Did you mean {{email}}?",
+  "input.email.or.phone.suggestion.link": "Click here to use this email",
   "input.email.placeholder": "بریښنالیک",
+  "input.email.suggestion.hint": "Did you mean {{email}}?",
+  "input.email.suggestion.link": "Click here to use this email",
   "input.facebook.url.label": "Link to your facebook profile",
   "input.facebook.url.placeholder": "Facebook profile",
   "input.filter.jobs.label": "Filter on",
@@ -207,6 +211,8 @@
   "input.gender.label": "Gender",
   "input.gender.placeholder": "Gender",
   "input.got.coordination.number.label": "Do you have a coordination number (samordningsnummmer)?",
+  "input.ignored_notifications.label": "Ignored notifications",
+  "input.ignored_notifications.placeholder": "Ignored notifications",
   "input.interests.hint": "Please rate how interested you are in the chosen interests",
   "input.interests.label": "Interests",
   "input.interests.placeholder": "Interests",
@@ -214,6 +220,7 @@
   "input.job.digest.notification.frequency.placeholder": "Notification Frequency",
   "input.job.experience.label": "کاري تجربه",
   "input.job.experience.placeholder": "کاري تجربه",
+  "input.just.arrived.terms.label": "I accept Just Arrived´s terms of employment",
   "input.languages.hint": "Please rate how good you are at the chosen languages",
   "input.languages.label": "د ژبې مهارتونه",
   "input.languages.placeholder": "د ژبې مهارتونه",
@@ -228,6 +235,9 @@
   "input.name.placeholder": "نوم",
   "input.new.password.label": "New password",
   "input.new.password.placeholder": "New password",
+  "input.occupations.hint": "Please specify how much experience you have in the chosen line of work",
+  "input.occupations.label": "کاري تجربه",
+  "input.occupations.placeholder": "کاري تجربه",
   "input.old.password.label": "Old password",
   "input.old.password.placeholder": "Old password",
   "input.password.label": "Lösenord",
@@ -235,6 +245,7 @@
   "input.personal.id.description": "Photo of my personal ID card",
   "input.personal.id.header": "Personal ID",
   "input.personal.id.label": "Personal ID",
+  "input.personal.letter.header": "Personal letter",
   "input.phone.label": "تلیفون",
   "input.phone.placeholder": "تلیفون",
   "input.primary.occupations.label": "Choose occupations that you are interested in",
@@ -273,6 +284,8 @@
   "input.work.permit.front.description": "Front photo of my work permit",
   "input.work.permit.front.header": "د کار جواز",
   "input.work.permit.front.label": "Work permit (front photo)",
+  "input.years.of.experience.label": "Years of experience",
+  "input.years.of.experience.placeholder":  "Years of experience",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
   "job.actions.header.applied": "تاسې د ګومارنې لپاره غوښتنه کړې",
@@ -317,8 +330,8 @@
   "job.company.description.section.title": "Short about {{company}}",
   "job.description.section.header": "توضیحات",
   "job.description.section.title": "About the job",
-  "job.digest.form.city.hint": "Choose one or a few cities to narrow your search",
   "job.digest.form.city.add": "Add city",
+  "job.digest.form.city.hint": "Choose one or a few cities to narrow your search",
   "job.digest.form.delete.button": "Delete",
   "job.digest.form.info": "Scroll down to see your active subscriptions",
   "job.digest.form.max.cities": "You can not add any more cities",
@@ -335,7 +348,6 @@
   "job.important.information.section.salary.per.hour": "{{grossSalaryPerHour}} gross salary",
   "job.important.information.section.salary.title": "Salary",
   "job.important.information.section.title": "Important information",
-  "job.important.information.section.total.salary": "{{totalGrossSalary}} total salary ({{totalNetSalary}} after tax)",
   "job.information.section.header": "Information",
   "job.location.section.header": "Location",
   "job.recruiter.section.title": "Responsible recruiter",
@@ -387,14 +399,14 @@
   "menu.main.my_assignment": "My Applications",
   "menu.main.profile": "پروفایل",
   "menu.main.register": "د حساب رامینځته کول",
-  "menu.main.subscriptions": "Job subscriptions",
   "menu.main.staffing_time_report": "Time report",
+  "menu.main.subscriptions": "Job subscriptions",
   "menu.main.support.chat": "Chat with Just Arrived",
   "meta.404.description": "The page or resource you are looking for can not be found",
   "meta.404.title": "Not found",
   "meta.applications.description": "Here you can see your job applications and their current status",
   "meta.applications.title": "Your applications",
-  "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
+  "meta.contact.description": "If you have any questions or feedback feel free to contact us and we will be in touch as soon as we can.",
   "meta.contact.title": "Contact us",
   "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
   "meta.cookies.about.title": "Cookies",
@@ -495,6 +507,7 @@
   "user.missing.traits.form.submit.button": "Next",
   "user.missing.traits.message.description": "Consider providing us with more information to increse your chances to get jobs",
   "user.missing.traits.message.header": "We are interested in you",
+  "user.profile.form.document.input.hint": "Only documents (.pdf, .docx, .doc)",
   "user.profile.form.education.section.header": "روزنه",
   "user.profile.form.general.skills.section.header": "General skills",
   "user.profile.form.interests.section.header": "Interests",
@@ -533,6 +546,7 @@
   "user.update.form.social.network.section.header": "Social networks",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Save changes",
+  "user.update.form.work.experience.section.header": "کاري تجربه",
   "users.filter.search.label": "Search users",
   "users.filter.search.placeholder": "Search users",
   "validations.email": "must be a valid email address",
