--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -113,7 +113,7 @@
   "guide.card.welcome.item.3.title": "På jobbet",
   "guide.card.welcome.paragraph.1": "Är du ny i Sverige och inte säker på vad du ska göra när du söker jobb? I den här guiden har vi samlat information, samt tips och tricks som kommer hjälpa dig.",
   "guide.card.welcome.paragraph.2": "Guiden består av 3 delar:",
-  "guide.card.welcome.title": "Välkommen till Just Arriveds Jobbguide",
+  "guide.card.welcome.title": "Välkommen till Just Arriveds jobbguide",
   "guide.menu.title": "Jobbguide",
   "hint.pager.next": "Nästa",
   "hint.pager.previous": "Föregående",
@@ -220,6 +220,7 @@
   "input.job.digest.notification.frequency.placeholder": "Notifikiationsfrekvens",
   "input.job.experience.label": "Arbetslivserfarenhet",
   "input.job.experience.placeholder": "Arbetslivserfarenhet",
+  "input.just.arrived.terms.label": "Jag accepterar Just Arriveds anställningsvillkor",
   "input.languages.hint": "\nBedöm hur bra du är på de valda språken",
   "input.languages.label": "Språkkunskaper",
   "input.languages.placeholder": "Språkkunskaper",
@@ -234,6 +235,9 @@
   "input.name.placeholder": "Namn",
   "input.new.password.label": "Nytt lösenord",
   "input.new.password.placeholder": "Nytt lösenord",
+  "input.occupations.hint": "Var god specificera hur lång erfarenhet du har inom det valda området",
+  "input.occupations.label": "Arbetslivserfarenhet",
+  "input.occupations.placeholder": "Arbetslivserfarenhet",
   "input.old.password.label": "Gammalt lösenord",
   "input.old.password.placeholder": "Gammalt lösenord",
   "input.password.label": "Lösenord",
@@ -241,6 +245,7 @@
   "input.personal.id.description": "Foto av ditt personliga ID kort",
   "input.personal.id.header": "Personligt ID",
   "input.personal.id.label": "Personligt ID",
+  "input.personal.letter.header": "Personligt brev",
   "input.phone.label": "Telefon",
   "input.phone.placeholder": "Telefon",
   "input.primary.occupations.label": "Välj de yrken du är intresserad av",
@@ -279,6 +284,8 @@
   "input.work.permit.front.description": "Framsidan av ditt uppehållstillstånd",
   "input.work.permit.front.header": "Arbetstillstånd",
   "input.work.permit.front.label": "Arbetstillstånd (framsidan)",
+  "input.years.of.experience.label": "Års erfarenhet",
+  "input.years.of.experience.placeholder":  "Års erfarenhet",
   "input.zip.label": "Postnummer",
   "input.zip.placeholder": "Postnummer",
   "job.actions.header.applied": "Du har sökt jobbet",
@@ -539,6 +546,7 @@
   "user.update.form.social.network.section.header": "Sociala nätverk",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Spara ändringar",
+  "user.update.form.work.experience.section.header": "Arbetslivserfarenhet",
   "users.filter.search.label": "Sök användare",
   "users.filter.search.placeholder": "Sök användare",
   "validations.email": "måste vara en giltig email",
