--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -463,10 +463,10 @@
   "reset.password.form.login.link": "Log in",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
-  "section.utalk.button": "Börja nu!",
-  "section.utalk.description": "Du som är registrerad hos Just Arrived får nu gratis tillgång till uTalks språkprodukt för svenska.  Med uTalk lär du dig snabbt ett nytt språk på ett lekfullt sätt där båda hjärnhalvorna aktiveras. Du kan lära dig svenska från mer än 100 olika språk. uTalk funkar både för dig som vill komma igång med svenskan och för dig som vill komplettera SFI.",
-  "section.utalk.hint": "Klicka nedan för att skapa ett konto och starta din kostnadsfria utbildning i svenska.",
-  "section.utalk.title": "Lär dig svenska. Kul, enkelt och gratis. Med snabbt resultat!",
+  "section.utalk.button": "Start now!",
+  "section.utalk.description": "Since you're registered with Just Arrived you can now get free access to uTalks language learing product for Swedish. With Utalk you can learn a new language fast and while having fun. Du can learn Swedish from over a 100 different languages. uTalk works for you how want to learn Swedish from scratch or to complement SFI or other studies.",
+  "section.utalk.hint": "Click below to create your free account and get started with learning Swedish today!",
+  "section.utalk.title": "Learn Swedish Fun, simple and free with fast results!",
   "share.section.title": "Share on social media",
   "share.with.modal.section.title": "Share",
   "sign.for.job.form.submit.button": "Sign",
