Replace FAQ link with job guide link in main nav

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -390,6 +390,7 @@
   "menu.language.title": "Select language",
   "menu.language.translation_by_probono": "Translation made probono by",
   "menu.main.contact": "Contact",
+  "menu.main.guide": "Job guide",
   "menu.main.faq": "Questions and Answers",
   "menu.main.find_assignment": "Find jobs",
   "menu.main.god.mode": "God mode",
