--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -463,6 +463,10 @@
   "reset.password.form.login.link": "تسجيل الدخول",
   "reset.password.form.submit.button": "تغيير كلمة المرور",
   "reset.password.title": "حدد كلمة مرورك الجديدة ",
+  "section.utalk.button": "Start now!",
+  "section.utalk.description": "Since you're registered with Just Arrived you can now get free access to uTalks language learing product for Swedish. With Utalk you can learn a new language fast and while having fun. Du can learn Swedish from over a 100 different languages. uTalk works for you how want to learn Swedish from scratch or to complement SFI or other studies.",
+  "section.utalk.hint": "Click below to create your free account and get started with learning Swedish today!",
+  "section.utalk.title": "Learn Swedish Fun, simple and free with fast results!",
   "share.section.title": "المشاركة على وسائل التواصل الإجتماعي",
   "share.with.modal.section.title": "المشاركة",
   "sign.for.job.form.submit.button": "تسجيل دخول",
