--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -465,8 +465,9 @@
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
   "section.utalk.button": "Start now!",
+  "section.utalk.not_logged_in_button": "Login or register to get access",
   "section.utalk.description": "Since you're registered with Just Arrived you can now get free access to uTalks language learing product for Swedish. With Utalk you can learn a new language fast and while having fun. Du can learn Swedish from over a 100 different languages. uTalk works for you how want to learn Swedish from scratch or to complement SFI or other studies.",
-  "section.utalk.hint": "Click below to create your free account and get started with learning Swedish today!",
+  "section.utalk.hint": "Click below to create your free uTalk account and get started with learning Swedish today!",
   "section.utalk.title": "Learn Swedish Fun, simple and free with fast results!",
   "share.section.title": "Share on social media",
   "share.with.modal.section.title": "Share",
