--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -390,6 +390,7 @@
   "menu.language.title": "اِختار لغة",
   "menu.language.translation_by_probono": "تم الترجمة مجانًا بواسطة",
   "menu.main.contact": "اتصال",
+  "menu.main.guide": "دليل الوظائف",
   "menu.main.faq": "أسئلة وأجوبة",
   "menu.main.find_assignment": "إيجاد وظيفة",
   "menu.main.god.mode": "وضع السوبر",
@@ -402,6 +403,8 @@
   "menu.main.staffing_time_report": "تقرير الوقت",
   "menu.main.subscriptions": "اشتراكات الوظائف",
   "menu.main.support.chat": "تحدث مع Just Arrived",
+  "meta.utalk.title": "uTalk",
+  "meta.utalk.description": "With uTalk you can learn Swedish language fast and while having fun.",
   "meta.404.description": "عذرا، الصفحة أو المورد الذي تبحث عنه غير موجود.",
   "meta.404.title": "صفحة غير موجودة",
   "meta.applications.description": "هنا يمكنك ان ترى طلبات الوظائف الخاصة بك وحالتها الحالية",
@@ -464,8 +467,9 @@
   "reset.password.form.submit.button": "تغيير كلمة المرور",
   "reset.password.title": "حدد كلمة مرورك الجديدة ",
   "section.utalk.button": "Start now!",
-  "section.utalk.description": "Since you're registered with Just Arrived you can now get free access to uTalks language learing product for Swedish. With Utalk you can learn a new language fast and while having fun. Du can learn Swedish from over a 100 different languages. uTalk works for you how want to learn Swedish from scratch or to complement SFI or other studies.",
-  "section.utalk.hint": "Click below to create your free account and get started with learning Swedish today!",
+  "section.utalk.not_logged_in_button": "Login or register to get access",
+  "section.utalk.description": "Since you're registered with Just Arrived you can now get free access to uTalks language learing product for Swedish. With uTalk you can learn a new language fast and while having fun. You can learn Swedish from over a 100 different languages. uTalk works for you how want to learn Swedish from scratch or to complement SFI or other studies.",
+  "section.utalk.hint": "Click below to create your free uTalk account and get started with learning Swedish today!",
   "section.utalk.title": "Learn Swedish Fun, simple and free with fast results!",
   "share.section.title": "المشاركة على وسائل التواصل الإجتماعي",
   "share.with.modal.section.title": "المشاركة",
