--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -390,6 +390,7 @@
   "menu.language.title": "د ژبې انتخاب کول",
   "menu.language.translation_by_probono": "Translation made probono by",
   "menu.main.contact": "اړیکه",
+  "menu.main.guide": "Job guide",
   "menu.main.faq": "پوښتنې او ځوابونه",
   "menu.main.find_assignment": "د ګومارنې موندل",
   "menu.main.god.mode": "God mode",
@@ -402,6 +403,8 @@
   "menu.main.staffing_time_report": "Time report",
   "menu.main.subscriptions": "Job subscriptions",
   "menu.main.support.chat": "Chat with Just Arrived",
+  "meta.utalk.title": "uTalk",
+  "meta.utalk.description": "With uTalk you can learn Swedish language fast and while having fun.",
   "meta.404.description": "The page or resource you are looking for can not be found",
   "meta.404.title": "Not found",
   "meta.applications.description": "Here you can see your job applications and their current status",
@@ -464,8 +467,9 @@
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
   "section.utalk.button": "Start now!",
-  "section.utalk.description": "Since you're registered with Just Arrived you can now get free access to uTalks language learing product for Swedish. With Utalk you can learn a new language fast and while having fun. Du can learn Swedish from over a 100 different languages. uTalk works for you how want to learn Swedish from scratch or to complement SFI or other studies.",
-  "section.utalk.hint": "Click below to create your free account and get started with learning Swedish today!",
+  "section.utalk.not_logged_in_button": "Login or register to get access",
+  "section.utalk.description": "Since you're registered with Just Arrived you can now get free access to uTalks language learing product for Swedish. With uTalk you can learn a new language fast and while having fun. You can learn Swedish from over a 100 different languages. uTalk works for you how want to learn Swedish from scratch or to complement SFI or other studies.",
+  "section.utalk.hint": "Click below to create your free uTalk account and get started with learning Swedish today!",
   "section.utalk.title": "Learn Swedish Fun, simple and free with fast results!",
   "share.section.title": "Share on social media",
   "share.with.modal.section.title": "Share",
