--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -390,6 +390,7 @@
   "menu.language.title": "Välj språk",
   "menu.language.translation_by_probono": "Översättningarna gjorda probono av",
   "menu.main.contact": "Kontakt",
+  "menu.main.guide": "Jobbguide",
   "menu.main.faq": "Frågor och Svar",
   "menu.main.find_assignment": "Hitta jobb",
   "menu.main.god.mode": "Gudläge",
@@ -402,6 +403,8 @@
   "menu.main.staffing_time_report": "Tidsrapportera",
   "menu.main.subscriptions": "Jobbmail",
   "menu.main.support.chat": "Chatta med Just Arrived",
+  "meta.utalk.title": "uTalk",
+  "meta.utalk.description": "Med uTalk kan du lära dig svenska språket snabbt och roligt!",
   "meta.404.description": "Sidan eller resursen du söker kunde inte hittas",
   "meta.404.title": "Hittades inte",
   "meta.applications.description": "Här kan du se dina jobbansökningar och deras nuvarande status",
@@ -464,6 +467,7 @@
   "reset.password.form.submit.button": "Byt lösenord",
   "reset.password.title": "Skriv in ditt nya lösenord",
   "section.utalk.button": "Börja nu!",
+  "section.utalk.not_logged_in_button": "Logga in eller registrera dig för tillgång",
   "section.utalk.description": "Du som är registrerad hos Just Arrived får nu gratis tillgång till uTalks språkprodukt för svenska. Med uTalk lär du dig snabbt ett nytt språk på ett lekfullt sätt där båda hjärnhalvorna aktiveras. Du kan lära dig svenska från mer än 100 olika språk. uTalk funkar både för dig som vill komma igång med svenskan och för dig som vill komplettera SFI.",
   "section.utalk.hint": "Klicka nedan för att skapa ett konto och starta din kostnadsfria utbildning i svenska.",
   "section.utalk.title": "Lär dig svenska. Kul, enkelt och gratis. Med snabbt resultat!",
